# chainlinkmesh-network

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.server  README.md  utility-scripts.sh
.githooks/: post-commit
.github/workflows/: cmake.yml
lib/: CMakeLists.txt
lib/schemas/: private-protocol.fbs
lib/src/: certificates.cpp  certificates.hpp  clock.cpp  clock.hpp  debug.h  debug.hpp  error.hpp  literals.cpp  literals.hpp  node.cpp  node.hpp  peers.cpp  peers.hpp  private-protocol.cpp  private-protocol.hpp  public-protocol.cpp  public-protocol.hpp  scope-exit.hpp  types.cpp  types.hpp  utilities.cpp  utilities.hpp  wireguard.cpp  wireguard.hpp
lib/tests/: test.hpp  test_base.cpp
lib/tests/certificate-manager/: .gitignore  Makefile  test.cpp
lib/tests/peers/: test.cpp
lib/tests/private-protocol/: test.cpp
lib/tests/private-protol/: test.cpp
lib/tests/public-protocol/: .gitignore  Makefile  invalid-psk-packet.protodata  invalid-psk-signature-packet.protodata  legitimate-ca-key.pem  legitimate-csr-key.pem  legitimate-csr.csr  legitimate-packet.data  legitimate-packet.protodata  legitimate-psk-signature.sha256  legitimate-psk.protodata  legitimate-response-packet.protodata  test.cpp  unknown-referring-node.protodata
lib/tests/types/: test.cpp
lib/tests/utilities/: test.cpp
server/: CMakeLists.txt
server/src/: app.cpp  app.hpp  linux-netlink.cpp  linux-netlink.hpp  linux-wireguard-manager.cpp  linux-wireguard-manager.hpp  main.cpp  server.cpp  server.hpp  validators.cpp  validators.hpp
server/tests/: test.hpp  test_base.cpp
server/tests/cli/: test.cpp
server/tests/configuration/: test.cpp
server/tests/public-protocol/: .gitignore  Makefile  legitimate-init-packet.protodata  legitimate-psk.protodata  test.cpp
server/tests/server/: test.cpp
server/tests/validators/: test.cpp
test/: deploy-proxmox.sh  run-test-async.sh  testsuite.sh  utils.sh
test/testsuite/: .gitignore  bandwidth.sh  fuzz-loadtest.cpp  fuzz-loadtest.sh  fuzz.sh  loadtest.sh
